--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
             <div class="item item-top">
               <span>2019.07 ~ 2022.11</span>
               <span class="mid">易宝（东莞）软件有限公司</span>
-              <span class="job">工作</span>
+              <span class="job">前端开发</span>
             </div>
             <div class="item item-stage">
               <span><i class="iconfont icon-dot"></i>CoNet · PC项目</span>
@@ -133,9 +133,6 @@
                 该项目的主要是改变传统的作业模式，从谷歌地图+Excel 转变为在线集成+自动化，实现海量数据的精准规划，缩短工作周期，计算自动化，减少手工变更传递遗漏的问题。
               </p>
               <p>
-                <em>核心开发</em>
-              </p>
-              <p>
                 主要负责项目重构版本的搭建、团队前端公共基础的建设与规划，以及模块开发。主要技术栈：<strong>Vue2</strong>
                 、
                 <strong>Componsition API</strong>
@@ -144,29 +141,24 @@
               </p>
               <div>
                 <p>
-                  1. 使用 <strong>Vue Cli</strong> 进行项目搭建，设计项目结构，划分模块，对<strong>Axios</strong>进行封装配置。结合
-                  <strong>Eslint</strong> 和 <strong>Githook</strong> 保证代码质量及校验提交信息，引入字体图标库。
+                  <em>工作内容</em>
                 </p>
                 <p>
-                  2. 负责实现组件文档库，扩展 Markdown 插件，增加自定义容器，生成 Code 及 Vue 组件，从而实现可演示可复制的轻量级组件文档库。
+                  1. 独立负责重构版本的搭建，配置 Webpack 、ESLint、Husky 、前端代理，引入字体图标库，对项目流程有一定的认识。
                 </p>
                 <p>
-                  3. 封装常用的工具函数、组件，能够满足基础业务需求，提升开发效率。
+                  2. 封装公共组件（如表格、Dialog 、动态表单）、自定义指令（如拖动、按钮 Loading），实现通过组件配置实现功能及界面，提高开发效率。
+                </p>
+                <p>
+                  3. 实现自定义 Loader 对 MD 文件转换成组件文档，实现一份代码同时生成演示 Demo 及可复制的组件代码，减少组件文档的编写成本。
                 </p>
                 <p>
                   4. 负责地图可视化开发及系统模块的开发，利用路由元信息区分场景结合配置文件完成对页面功能点的控制。
                 </p>
                 <p>
-                  <em>除了日常开发，还针对性能做了一些优化。</em>
+                  5. 多维度进行性能优化，如优化请求次数，组件懒加载、页面缓存，使用谷歌浏览器性能分析工具识别并优化重复的 watch。
                 </p>
                 <p>
-                  1. 使用虚拟列表虚拟树等组件替换数据量大的组件，加快渲染速度。
-                </p>
-                <p>
-                  2. 静态文件使用内容哈希方便缓存，使用<strong>keep-alive</strong>缓存频繁切换的地图组件。
-                </p>
-                <p>
-                  3. 合理使用防抖节流、事件委托，简化样式选择器，排查可能重排的代码。
                 </p>
               </div>
             </div>
@@ -180,20 +172,21 @@
                 该项目的主要作用功能是继承勘测和多专业的设计数据，高效准确的完成单站综合设计，自动输出客户化设计文档。
               </p>
               <p>
-                <em>前端开发</em>
-              </p>
-              <p>
                 负责基于
                 <strong>bpmn.js</strong>
                 搭建流程可视化编排，与后端配合实现流程的开始、结束、网关及状态，并验证流程的规则，以及任务管理模块的实现。
               </p>
+
               <p>
-                <em>1. 善于使用 Js 工具</em>
+                <em>工作内容</em>
+              </p>
+              <p>
+                1. 善于使用 Js 工具
                 使用表格、表单、富文本编辑器、在线 Excel 等多种 Js
                 工具实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
               </p>
               <p>
-                <em>2. 源码阅读</em> 通过阅读
+                2. 源码阅读 通过阅读
                 <strong>
                   <a href="https://github.com/bpmn-io/bpmn-js" target="_blank"><i
                       class="iconfont icon-link inline"></i>bpmn.js源码</a>
