--- a/src/index.html
+++ b/src/index.html
@@ -132,19 +132,19 @@
               <p>
                 该项目的主要是改变传统的作业模式，从谷歌地图+Excel 转变为在线集成+自动化，实现海量数据的精准规划，缩短工作周期，计算自动化，减少手工变更传递遗漏的问题。
               </p>
-              <p>
-                主要负责项目重构版本的搭建、团队前端公共基础的建设与规划，以及模块开发。主要技术栈：<strong>Vue2</strong>
-                、
-                <strong>Componsition API</strong>
-                、<strong> Mapbox GL(地图引擎)</strong> 、
-                <strong>Element UI</strong>、<strong>Less</strong> 等。
-              </p>
               <div>
                 <p>
                   <em>工作内容</em>
                 </p>
                 <p>
-                  1. 独立负责重构版本的搭建，配置 Webpack 、ESLint、Husky 、前端代理，引入字体图标库，对项目流程有一定的认识。
+                  主要负责项目重构版本的搭建、团队前端公共基础的建设与规划，以及模块开发。主要技术栈：<strong>Vue2</strong>
+                  、
+                  <strong>Componsition API</strong>
+                  、<strong> Mapbox GL(地图引擎)</strong> 、
+                  <strong>Element UI</strong>、<strong>Less</strong> 等。
+                </p>
+                <p>
+                  1. 负责重构版本的搭建，配置 Webpack 、ESLint、Husky 、前端代理，引入字体图标库。
                 </p>
                 <p>
                   2. 封装公共组件（如表格、Dialog 、动态表单）、自定义指令（如拖动、按钮 Loading），实现通过组件配置实现功能及界面，提高开发效率。
@@ -156,7 +156,7 @@
                   4. 负责地图可视化开发及系统模块的开发，利用路由元信息区分场景结合配置文件完成对页面功能点的控制。
                 </p>
                 <p>
-                  5. 多维度进行性能优化，如优化请求次数，组件懒加载、页面缓存，使用谷歌浏览器性能分析工具识别并优化重复的 watch。
+                  5. 多维度进行性能优化，如优化请求次数，组件懒加载、页面缓存，使用谷歌浏览器性能分析工具对可优化点识别优化。
                 </p>
                 <p>
                 </p>
@@ -172,21 +172,21 @@
                 该项目的主要作用功能是继承勘测和多专业的设计数据，高效准确的完成单站综合设计，自动输出客户化设计文档。
               </p>
               <p>
-                负责基于
-                <strong>bpmn.js</strong>
-                搭建流程可视化编排，与后端配合实现流程的开始、结束、网关及状态，并验证流程的规则，以及任务管理模块的实现。
+                <em>工作内容</em>
               </p>
 
               <p>
-                <em>工作内容</em>
+                负责基于
+                <strong>bpmn.js</strong>
+                搭建流程可视化编排，任务流串联整个系统，保证每个任务节点的顺利完成。
+                同时参与人员管理界面及任务管理界面的开发。
               </p>
               <p>
-                1. 善于使用 Js 工具
-                使用表格、表单、富文本编辑器、在线 Excel 等多种 Js
+                1. 使用表格、表单、富文本编辑器、在线 Excel 等多种 Js
                 工具实现人员任务的管理、指派、提交，收集过程材料，完成任务，输出报告。
               </p>
               <p>
-                2. 源码阅读 通过阅读
+                2. 通过阅读
                 <strong>
                   <a href="https://github.com/bpmn-io/bpmn-js" target="_blank"><i
                       class="iconfont icon-link inline"></i>bpmn.js源码</a>
