--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,13 @@
         </div>
 
         <div class="job">
-          <h2>Web 前端开发工程师 <span> / 随时到岗</span></h2>
+          <h2>Web 前端开发工程师 <span> / 重庆 · 随时到岗</span></h2>
         </div>
       </section>
       <section class="section">
         <div class="info">
           <p>男 / 1996.09</p>
-          <p>本科 / 2019年毕业 · 3年工作经验</p>
+          <p>本科 / 2019年毕业 · 5年工作经验</p>
           <p>桂林理工大学 · 信息与计算科学</p>
         </div>
         <address class="address">
@@ -66,7 +66,7 @@
             <div class="item item-info">
               <p>
                 <i class="iconfont icon-dot"></i>
-                3年前端工作经验。
+                5年前端工作经验。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
@@ -86,20 +86,14 @@
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
-                熟练使用ES6语法编程，追求代码高质量可维护性。以
-                <strong>Vue2</strong> 、<strong>Less</strong>、<strong>Element UI</strong>
+                熟练使用ES6语法编程，追求代码高质量可维护性。熟练使用
+                <strong>Vue2/Vue3</strong>、<strong>Less/Scss</strong>、<strong>Element UI</strong>
                 等为常用技术栈，对
-                <strong>Vue2源码</strong> 有一定的了解，能够使用
-                <strong>Vue3</strong> 进行开发。
+                <strong>Vue2源码</strong> 有一定的了解。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
-                熟练使用 <strong>Git</strong> 进行版本控制和代码托管、<strong>Markdown</strong>
-                进行文档编写。 熟悉项目常规开发流程，能够使用
-                <strong>Webpack</strong>
-                进行常用的配置，并对其运行机制有一定的了解。
-                熟悉开发调试技巧，熟练借助工具进行代码调试定位。
-                了解部署步骤，能够使用<strong>Docker</strong> 进行打包部署。
+                能够使用<strong>React+Taro</strong> 开发微信小程序、钉钉小程序，进行多端开发。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
@@ -116,6 +110,92 @@
             <h3 class="title">工作经验</h3>
             <span class="line"></span>
           </header>
+
+          <div class="section-bd">
+            <div class="item item-top">
+              <span>2023.02 - 今</span>
+              <span class="mid">重庆众乐邦网络科技有限公司</span>
+              <span class="job">前端开发、前端负责人</span>
+            </div>
+            <div>
+              <p>
+                主要做灵活用工数字化薪税管理平台，提供数字化产品与服务，帮助企业管理临时工及兼职人员，在用工衔接、成果交付、费用结算、票据管理等方面助力企业实现降本增效、规范经营、模式升级。平台由业务前台系统（企业、灵工使用）、业务后台系统（维护业务信息及支付等）、财税系统（内部使用）以及BI系统等组成。
+              </p>
+            </div>
+            <div class="item item-stage">
+              <span><i class="iconfont icon-dot"></i>财税系统</span>
+              <span>2023.02 - 今</span>
+            </div>
+            <div class="item item-info">
+              <p>
+                财税系统分为CRM、财务管理、渠道管理、用户管理、消息管理、系统设置，以及钉钉小程序和微信小程序。财税系统的用户群体为销售、财务、业务支持、网络营销等。
+              </p>
+              <div>
+                <p>
+                  <em>工作内容</em>
+                </p>
+                <p>
+                  1. 负责财税系统多端的相关的需求开发，重构CRM、渠道模块，以及用户模块的重构，将用户中心脱离财税系统。
+                </p>
+                <p>
+                  2. 维护<strong>公共库npm包</strong>，保证各个模块之间的正常引用。
+                </p>
+                <p>
+                  3. 维护、迭代微信渠道通小程序、钉钉众乐邦员工版，主要技术栈：<strong>React、Taro</strong>。
+                </p>
+              </div>
+            </div>
+            <div class="item item-stage">
+              <span><i class="iconfont icon-dot"></i>战役大屏</span>
+              <span>2022.07 - 2022.09</span>
+            </div>
+            <div class="item item-info">
+              <p>
+                使用图表、轮播、排名等展示销售战役数据，包含pc、移动端、TV端。
+              </p>
+              <div>
+                <p>
+                  <em>工作内容</em>
+                </p>
+                <p>
+                  1. 主导项目技术选型、TV设备调研等。技术栈为
+                  <strong>Vue3</strong>、<strong>Tailwind Css</strong>、<strong>Element
+                    Plus</strong>等，使用<strong>scale</strong>方案适配TV大屏，整体布局使用<strong>grid</strong>。
+                </p>
+                <p>
+                  2. 通过url传参可控制界面比例，TV布局兼容性良好。通过polyfill插件<strong> @vitejs/plugin-legacy</strong>兼容钉钉内核chrome69的浏览器。
+                </p>
+              </div>
+            </div>
+
+            <div class="item item-stage">
+              <span><i class="iconfont icon-dot"></i>前端负责人</span>
+              <span>2022.07 - 2023.01</span>
+            </div>
+            <div class="item item-info">
+              <p>
+                负责众乐邦前端相关事项，技术改造、技术选型、人员管理等
+              </p>
+              <div>
+                <p>
+                  <em>工作内容</em>
+                </p>
+                <p>
+                  1. 负责前端人员的绩效目标制定、约谈、任务分配等
+                </p>
+                <p>
+                  2. 推行技术改造：全线项目由npm改为pnpm管理，并配置锁文件、前端重点项目接入监控平台、文件预览兜底（兼容多套文件预览供应商）、战役大屏
+                </p>
+                <p>
+                  3. 产研之间的需求同步，前端资产的维护等。
+                </p>
+              </div>
+            </div>
+          </div>
+
+
+          <div style="page-break-after: always"></div>
+          <div class="page-padding"></div>
 
           <div class="section-bd">
             <div class="item item-top">
@@ -202,7 +282,7 @@
         </article>
 
         <!-- 打印换行 -->
-        <div style="page-break-after: always"></div>
+        <!-- <div style="page-break-after: always"></div> -->
 
         <article class="article">
           <header class="section-hd">
@@ -247,27 +327,20 @@
             <div class="item item-top">
               <p>
                 <i class="iconfont icon-dot"></i>
-                个人项目 · 基于 Vue3 的音乐网站
+                个人项目 · 风控决策引擎（开发中）
               </p>
-              <a class="item-more" href="http://music.pl-fe.cn/#/" target="_blank" title="音乐网站"><i
+              <a class="item-more" href="http://pl-fe.cn:10010/#/" target="_blank" title="风控决策引擎"><i
                   class="iconfont icon-link"></i></a>
             </div>
             <div class="item item-info">
               <p>
-                支持登陆、在线听歌、搜索、歌单、歌手等功能，同时适配了移动端。
+                开发中，当前的公司的风控决策还是通过代码方式来进行，与后端商量设计个决策引擎提高风控效率，目前是demo阶段。
               </p>
               <p>
-                前端使用 <strong>Vite</strong> 初始化项目，基于
-                <strong>Vue3</strong>、<strong>TypeScript</strong>、<strong>Element Plus</strong>
-                、<strong>Less</strong>完成界面开发， 使用
-                <strong>Pinia</strong> 对全局数据进行统一管理。
+                前端框架使用 <strong>Vue3 + Antv G6</strong>
               </p>
               <p>
-                对部分页面做了缓存，对数据量大的场景使用滚动加载的形式。
-                图片方面，采用了懒加载及缩略图等方案提升页面加载速度。
-              </p>
-              <p>
-                使用
+                部署使用
                 <strong>GitHub Actions</strong> +
                 <strong>Docker</strong> 自动部署到服务器。
               </p>
@@ -276,7 +349,7 @@
             <div class="item item-top">
               <p>
                 <i class="iconfont icon-dot"></i>
-                个人项目 · bpmn-doc (192 Starred / 70 Fork)
+                个人项目 · bpmn-doc (279 Starred / 95 Fork)
               </p>
               <a class="item-more" href="https://github.com/PL-FE/bpmn-doc" target="_blank" title="bpmn-doc"><i
                   class="iconfont icon-link"></i></a>
