--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="job">
-          <h2>Web 前端开发工程师 <span> / 重庆 · 随时到岗</span></h2>
+          <h2>Web 前端开发工程师 <span> / 重庆 · 两周内到岗</span></h2>
         </div>
       </section>
       <section class="section">
@@ -94,6 +94,10 @@
               <p>
                 <i class="iconfont icon-dot"></i>
                 能够使用<strong>React+Taro</strong> 开发微信小程序、钉钉小程序，进行多端开发。
+              </p>
+              <p>
+                <i class="iconfont icon-dot"></i>
+                在校期间，担任过校学生会，有平面设计经验，有一定的审美和设计能力，能够很好的还原设计稿。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
@@ -275,7 +279,7 @@
                 业务组件、配置文件，以及笔记，其中
                 <strong>
                   <a href="https://github.com/PL-FE/bpmn-doc" target="_blank"><i
-                      class="iconfont icon-link inline"></i>bpmn.js笔记</a> </strong>脱敏开源到 Github，获得190+star。
+                      class="iconfont icon-link inline"></i>bpmn.js笔记</a> </strong>脱敏开源到 Github，获得200+star。
               </p>
             </div>
           </div>
@@ -321,28 +325,6 @@
                       class="iconfont icon-github inline"></i>Github</a>
                 </strong>
                 技术交流分享。
-              </p>
-            </div>
-
-            <div class="item item-top">
-              <p>
-                <i class="iconfont icon-dot"></i>
-                个人项目 · 风控决策引擎（开发中）
-              </p>
-              <a class="item-more" href="http://pl-fe.cn:10010/#/" target="_blank" title="风控决策引擎"><i
-                  class="iconfont icon-link"></i></a>
-            </div>
-            <div class="item item-info">
-              <p>
-                开发中，当前的公司的风控决策还是通过代码方式来进行，与后端商量设计个决策引擎提高风控效率，目前是demo阶段。
-              </p>
-              <p>
-                前端框架使用 <strong>Vue3 + Antv G6</strong>
-              </p>
-              <p>
-                部署使用
-                <strong>GitHub Actions</strong> +
-                <strong>Docker</strong> 自动部署到服务器。
               </p>
             </div>
 
