--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
                   2. 维护<strong>公共库npm包</strong>，保证各个模块之间的正常引用。
                 </p>
                 <p>
-                  3. 维护、迭代微信渠道通小程序、钉钉众乐邦员工版，主要技术栈：<strong>React、Taro</strong>。
+                  3. 维护、迭代微信渠道通小程序、钉钉众乐邦员工版，以及小程序的备案、认证等。主要技术栈：<strong>React、Taro</strong>。
                 </p>
               </div>
             </div>
