--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
             </div>
             <div>
               <p>
-                主要做灵活用工数字化薪税管理平台，提供数字化产品与服务，帮助企业管理临时工及兼职人员，在用工衔接、成果交付、费用结算、票据管理等方面助力企业实现降本增效、规范经营、模式升级。平台由业务前台系统（企业、灵工使用）、业务后台系统（维护业务信息及支付等）、财税系统（内部使用）以及BI系统等组成。
+                主要做灵活用工数字化薪税管理平台，提供数字化产品与服务，帮助企业管理临时工及兼职人员，在用工衔接、成果交付、费用结算、票据管理等方面助力企业实现降本增效、规范经营、模式升级。
               </p>
             </div>
             <div class="item item-stage">
@@ -149,36 +149,14 @@
                 </p>
               </div>
             </div>
-            <div class="item item-stage">
-              <span><i class="iconfont icon-dot"></i>战役大屏</span>
-              <span>2022.07 - 2022.09</span>
-            </div>
-            <div class="item item-info">
-              <p>
-                使用图表、轮播、排名等展示销售战役数据，包含pc、移动端、TV端。
-              </p>
-              <div>
-                <p>
-                  <em>工作内容</em>
-                </p>
-                <p>
-                  1. 主导项目技术选型、TV设备调研等。技术栈为
-                  <strong>Vue3</strong>、<strong>Tailwind Css</strong>、<strong>Element
-                    Plus</strong>等，使用<strong>scale</strong>方案适配TV大屏，整体布局使用<strong>grid</strong>。
-                </p>
-                <p>
-                  2. 通过url传参可控制界面比例，TV布局兼容性良好。通过polyfill插件<strong> @vitejs/plugin-legacy</strong>兼容钉钉内核chrome69的浏览器。
-                </p>
-              </div>
-            </div>
 
             <div class="item item-stage">
               <span><i class="iconfont icon-dot"></i>前端负责人</span>
-              <span>2022.07 - 2023.01</span>
+              <span>2022.07 - 至今</span>
             </div>
             <div class="item item-info">
               <p>
-                负责众乐邦前端相关事项，技术改造、技术选型、人员管理等
+                负责众乐邦前端相关事项，技术改造、技术选型等
               </p>
               <div>
                 <p>
@@ -188,8 +166,21 @@
                   1. 负责前端人员的绩效目标制定、约谈、任务分配等
                 </p>
                 <p>
-                  2. 推行技术改造：全线项目由npm改为pnpm管理，并配置锁文件、前端重点项目接入监控平台、文件预览兜底（兼容多套文件预览供应商）、战役大屏
+                  2. 推行技术改造：
                 </p>
+                <p class="indent-2">
+                  (1) 全线项目由npm改为pnpm管理，并配置锁文件,使得项目部署时间由由5分钟减少到2分钟内。
+                </p>
+                <p class="indent-2">
+                  (2) 前端重点项目接入监控平台，方便产品运营了解用户习惯。
+                </p>
+                <p class="indent-2">
+                  (3) 推进文件预览兜底（兼容多套文件预览供应商）,减少文件预览故障带来的影响。
+                </p>
+                <p class="indent-2">
+                  (4) 主导<strong>战役大屏</strong>项目，包括技术选型、TV设备调研、开发进度把控等，确保进度及多端的兼容性。
+                </p>
+
                 <p>
                   3. 产研之间的需求同步，前端资产的维护等。
                 </p>
