--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,10 @@
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
+                有从0到1的项目搭建经验，熟悉敏捷开发流程。
+              </p>
+              <p>
+                <i class="iconfont icon-dot"></i>
                 在校期间，担任过校学生会，有平面设计经验，有一定的审美和设计能力，能够很好的还原设计稿。
               </p>
               <p>
