--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="job">
-          <h2>Web 前端开发工程师 <span> / 重庆 · 两周内到岗</span></h2>
+          <h2>Web 前端开发工程师 <span> / 重庆 · 一周内到岗</span></h2>
         </div>
       </section>
       <section class="section">
@@ -76,7 +76,7 @@
                 <i class="iconfont icon-dot"></i>
                 掌握Web前端开发基本技能，熟悉W3C标准、
                 <strong>HTML</strong> 、<strong>CSS</strong>
-                ，具有一定的审美，重视页面交互和还原UI。
+                ，担任过校学生会，有平面设计经验，有一定的审美和设计能力，能够很好的还原设计稿。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
@@ -87,7 +87,7 @@
               <p>
                 <i class="iconfont icon-dot"></i>
                 熟练使用ES6语法编程，追求代码高质量可维护性。熟练使用
-                <strong>Vue2/Vue3</strong>、<strong>Less/Scss</strong>、<strong>Element UI</strong>
+                <strong>Vue2/Vue3</strong>、<strong>Less/Scss</strong>、<strong>Element UI/Element PLUS</strong>
                 等为常用技术栈，对
                 <strong>Vue2源码</strong> 有一定的了解。
               </p>
@@ -97,15 +97,12 @@
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
-                有从0到1的项目搭建经验，熟悉敏捷开发流程。
-              </p>
-              <p>
-                <i class="iconfont icon-dot"></i>
-                在校期间，担任过校学生会，有平面设计经验，有一定的审美和设计能力，能够很好的还原设计稿。
+                熟悉敏捷开发流程,项目开发流程，能够独立从0到1搭建前端项目和nodejs项目，并通过<strong>Docker</strong>部署上线。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
                 时刻保持好奇心，持续关注业内前沿技术，拥抱开源。
+                合理利用 <strong>chatgpt、copilot</strong>提升编码效率。
                 工作上积极执行有责任心，具有良好的沟通合作能力、分析解决问题能力以及较强的学习能力。
               </p>
             </div>
@@ -146,10 +143,10 @@
                   1. 负责财税系统多端的相关的需求开发，重构CRM、渠道模块，以及用户模块的重构，将用户中心脱离财税系统。
                 </p>
                 <p>
-                  2. 维护<strong>公共库npm包</strong>，保证各个模块之间的正常引用。
+                  2. 维护<strong>公共库npm包</strong>，开发业务组件列表，以服务的方式调用表单、Dialog，组件支持传入jsx、render方式，提高开发效率，减少重复工作。
                 </p>
                 <p>
-                  3. 维护、迭代微信渠道通小程序、钉钉众乐邦员工版，以及小程序的备案、认证等。主要技术栈：<strong>React、Taro</strong>。
+                  3. 小程序的备案、认证。微信小程序和钉钉小程序的开发，以及钉钉小程序转H5对接钉钉微应用，API、浏览器等兼容性处理，主要技术栈：<strong>React、Taro</strong>。
                 </p>
               </div>
             </div>
@@ -176,17 +173,13 @@
                   (1) 全线项目由npm改为pnpm管理，并配置锁文件,使得项目部署时间由由5分钟减少到2分钟内。
                 </p>
                 <p class="indent-2">
-                  (2) 前端重点项目接入监控平台，方便产品运营了解用户习惯。
+                  (2) 监控平台SDK的开发，推进前端重点项目接入监控平台，方便产品运营了解用户习惯。
                 </p>
                 <p class="indent-2">
                   (3) 推进文件预览兜底（兼容多套文件预览供应商）,减少文件预览故障带来的影响。
                 </p>
                 <p class="indent-2">
-                  (4) 主导<strong>战役大屏</strong>项目，包括技术选型、TV设备调研、开发进度把控等，确保进度及多端的兼容性。
-                </p>
-
-                <p>
-                  3. 产研之间的需求同步，前端资产的维护等。
+                  (4) 主导<strong>战役大屏</strong>项目，包括技术选型、TV设备调研、开发进度把控等，使用<strong>Vue3</strong>开发确保进度及多端的兼容性。
                 </p>
               </div>
             </div>
