--- a/src/index.html
+++ b/src/index.html
@@ -70,16 +70,6 @@
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
-                熟悉 HTTP 协议等通用应用层协议, 了解前端缓存，浏览器渲染原理。
-              </p>
-              <p>
-                <i class="iconfont icon-dot"></i>
-                掌握Web前端开发基本技能，熟悉W3C标准、
-                <strong>HTML</strong> 、<strong>CSS</strong>
-                ，担任过校学生会，有平面设计经验，有一定的审美和设计能力，能够很好的还原设计稿。
-              </p>
-              <p>
-                <i class="iconfont icon-dot"></i>
                 对
                 <strong>JavaScript</strong>
                 、各类UI组件库、JS类库、模板引擎、MV*框架、工程化工具等有一定的认知，能够快速上手。
@@ -98,6 +88,9 @@
               <p>
                 <i class="iconfont icon-dot"></i>
                 熟悉敏捷开发流程,项目开发流程，能够独立从0到1搭建前端项目和nodejs项目，并通过<strong>Docker</strong>部署上线。
+              </p>
+              <p>
+                <i class="iconfont icon-dot"></i>担任过校学生会，有平面设计经验，有一定的审美和设计能力，能够很好的还原设计稿。
               </p>
               <p>
                 <i class="iconfont icon-dot"></i>
